force-app/main/default/objects/Meta__c/fields/Aeromedico__c.field-meta.xml
<CustomField>
    <fullName>Aeromedico__c</fullName>
    <label>Aeromédico</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>