force-app/main/default/objects/Meta__c/fields/Agendamento__c.field-meta.xml
<CustomField>
    <fullName>Agendamento__c</fullName>
    <label>Agendamento</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>