force-app/main/default/objects/Meta__c/fields/Assistencial__c.field-meta.xml
<CustomField>
    <fullName>Assistencial__c</fullName>
    <description>Total de oportunidades.</description>
    <inlineHelpText>Total de oportunidades.</inlineHelpText>
    <label>Assistencial</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>