force-app/main/default/objects/Meta__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>