force-app/main/default/objects/Meta__c/fields/Coordenacao__c.field-meta.xml
<CustomField>
    <fullName>Coordenacao__c</fullName>
    <label>Coordenação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>