force-app/main/default/objects/Meta__c/fields/DiasTrabalhados__c.field-meta.xml
<CustomField>
    <fullName>DiasTrabalhados__c</fullName>
    <label>Dias trabalhados</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>