force-app/main/default/objects/Meta__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <formula>TEXT(Ano__c) + TEXT(Competencia__c) + CASESAFEID(Usuario__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Externo</label>
    <type>Text</type>
</CustomField>