force-app/main/default/objects/Meta__c/fields/IdExternoCanal__c.field-meta.xml
<CustomField>
    <fullName>IdExternoCanal__c</fullName>
    <formula>TEXT(Ano__c) + TEXT(Competencia__c) + LOWER(SUBSTITUTE(Canal__c, &quot; &quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Externo Canal</label>
    <type>Text</type>
</CustomField>