force-app/main/default/objects/Meta__c/fields/IdExternoCargo__c.field-meta.xml
<CustomField>
    <fullName>IdExternoCargo__c</fullName>
    <formula>TEXT(Ano__c) + TEXT(Competencia__c) + LOWER(SUBSTITUTE(Cargo__c, &quot; &quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Externo Cargo</label>
    <type>Text</type>
</CustomField>