force-app/main/default/objects/Meta__c/fields/IdExternoLoja__c.field-meta.xml
<CustomField>
    <fullName>IdExternoLoja__c</fullName>
    <formula>TEXT(Ano__c) + TEXT(Competencia__c) + LOWER(SUBSTITUTE(Loja__c, &quot; &quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Externo Loja</label>
    <type>Text</type>
</CustomField>