force-app/main/default/objects/Meta__c/fields/IdExternoMovimentacao__c.field-meta.xml
<CustomField>
    <fullName>IdExternoMovimentacao__c</fullName>
    <formula>TEXT(Ano__c) + TEXT(Competencia__c) + LOWER(SUBSTITUTE(Usuario__r.FirstName + Usuario__r.LastName, &quot; &quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Externo Movimentação</label>
    <type>Text</type>
</CustomField>