force-app/main/default/objects/Meta__c/fields/IDGerente__c.field-meta.xml
<CustomField>
    <fullName>IDGerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>UserId do Gerente</description>
    <label>ID do Gerente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MetasIDGerente</relationshipName>
    <type>Lookup</type>
</CustomField>