force-app/main/default/objects/Meta__c/fields/IDSupervisor__c.field-meta.xml
<CustomField>
    <fullName>IDSupervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>UserId do Supervisor</description>
    <label>ID do Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MetasIDSupervisor</relationshipName>
    <type>Lookup</type>
</CustomField>