force-app/main/default/objects/Meta__c/fields/MetaDesafio__c.field-meta.xml
<CustomField>
    <fullName>MetaDesafio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meta Desafio</label>
    <type>Checkbox</type>
</CustomField>