force-app/main/default/objects/Meta__c/fields/NomeGerente__c.field-meta.xml
<CustomField>
    <fullName>NomeGerente__c</fullName>
    <formula>&quot;LEONARDO COSTA MARTINS TORRES&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerente</label>
    <type>Text</type>
</CustomField>