force-app/main/default/objects/Meta__c/fields/Odontologico__c.field-meta.xml
<CustomField>
    <fullName>Odontologico__c</fullName>
    <label>Odontológico</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>