force-app/main/default/objects/Meta__c/fields/PCompetencia__c.field-meta.xml
<CustomField>
    <fullName>PCompetencia__c</fullName>
    <label>% competência</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>