force-app/main/default/objects/Meta__c/fields/Revenda__c.field-meta.xml
<CustomField>
    <fullName>Revenda__c</fullName>
    <label>Revenda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>