force-app/main/default/objects/Meta__c/fields/Supervisao__c.field-meta.xml
<CustomField>
    <fullName>Supervisao__c</fullName>
    <label>Supervisão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>