force-app/main/default/objects/Meta__c/fields/Usuario_Meta_Desafio__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Meta_Desafio__c</fullName>
    <formula>IF(MetaDesafio__c, Usuario__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuário Meta Desafio</label>
    <type>Text</type>
</CustomField>