force-app/main/default/objects/Meta__c/fields/Visita__c.field-meta.xml
<CustomField>
    <fullName>Visita__c</fullName>
    <label>Visita</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>