force-app/main/default/objects/Meta__c/listViews/Supervisores.listView-meta.xml
<ListView>
    <fullName>Supervisores</fullName>
    <columns>NAME</columns>
    <columns>Ano__c</columns>
    <columns>Competencia__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Canal__c</columns>
    <columns>Loja__c</columns>
    <columns>Assistencial__c</columns>
    <columns>Aeromedico__c</columns>
    <columns>Odontologico__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cargo__c</field>
        <operation>equals</operation>
        <value>Supervisor de Vendas</value>
    </filters>
    <filters>
        <field>IDSupervisor__c</field>
        <operation>equals</operation>
    </filters>
    <label>Meta dos Supervisores</label>
</ListView>